--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "openai": "^4.24.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
+    "typescript": "^5.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -48,7 +49,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "prettier": "^3.1.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "tsx": "^4.7.0"
   }
 }
